--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^4.16.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -78,7 +80,6 @@
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   },
-
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   }
