--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.1.1",
     "@prisma/client": "^4.16.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "decimal.js": "^10.4.3",
+    "jest-mock-extended": "^3.0.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
